istio-deployments/demo/1-demo-v1-simple.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payments-virtual-service
spec:
  hosts:
  - payments
  http:
  - route:
    - destination:
        host: payments
        subset: v1
      weight: 100       
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: payments-destination-rule
spec:
  host: payments
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payment-checker-virtual-service
spec:
  hosts:
  - payment-checker
  http:
  - route:
    - destination:
        host: payment-checker
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: payment-checker-destination-rule
spec:
  host: payment-checker
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: register-virtual-service
spec:
  hosts:
  - register
  http:
  - route:
    - destination:
        host: register
        subset: v1
      weight: 100    
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: register-destination-rule
spec:
  host: register
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: crm-virtual-service
spec:
  hosts:
  - crm
  http:
  - route:
    - destination:
        host: crm
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: crm-destination-rule
spec:
  host: crm
  subsets:
  - name: v1
    labels:
      version: v1
---
