istio-deployments/demo/3-demo-v1-v3-rr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: "service-gateway"
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "virtual-service-gateway"
spec:
  hosts:
  - "*"
  gateways:
  - "service-gateway"
  http:
  - match:
    - uri:
        prefix: /api/transactions    
    route:
    - destination:
        host: "payments"    
        port:
          number: 8080        
  - match:
    - uri:
        exact: /api/requesters
    route:
    - destination:
        host: "payment-checker"
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/orders
    route:
    - destination:
        host: "crm"
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/claims
    route:
    - destination:
        host: "claims"
        port:
          number: 8080
  tcp:
  - match:
    - port: 50051
    route:
    - destination:
        host: customers
        port:
          number: 50051
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payments-virtual-service
spec:
  hosts:
  - payments
  http:
  - route:
    - destination:
        host: payments
        subset: v1
      weight: 100       
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: payments-destination-rule
spec:
  host: payments
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v3
    labels:
      version: v3
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payment-checker-virtual-service
spec:
  hosts:
  - payment-checker
  http:
  - route:
    - destination:
        host: payment-checker
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: payment-checker-destination-rule
spec:
  host: payment-checker
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: register-virtual-service
spec:
  hosts:
  - register
  http:
  - match:
    - headers:
        requester-id:
          exact: "ebe03de9-2840-4cf7-9768-f5055f606db3"
    route:
    - destination:
        host: register
        subset: v3
  - route:
    - destination:
        host: register
        subset: v1
      weight: 100
    - destination:
        host: register
        subset: v2
      weight: 0
    - destination:
        host: register
        subset: v4
      weight: 0      
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: register-destination-rule
spec:
  host: register
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
  - name: v4
    labels:
      version: v4
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: crm-virtual-service
spec:
  hosts:
  - crm
  http:
  - route:
    - destination:
        host: crm
        subset: v1
      weight: 0  
    - destination:
        host: crm
        subset: v2
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: crm-destination-rule
spec:
  host: crm
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: claims-virtual-service
spec:
  hosts:
  - claims
  http:
  - route:
    - destination:
        host: claims
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: claims-destination-rule
spec:
  host: claims
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customers-virtual-service
spec:
  hosts:
  - customers
  http:
  - route:
    - destination:
        host: customers
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: customers-destination-rule
spec:
  host: customers
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payments-authorization-virtual-service
spec:
  hosts:
  - payments-authorization
  http:
  - route:
    - destination:
        host: payments-authorization
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: payments-authorization-destination-rule
spec:
  host: payments-authorization
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fraud-detection-virtual-service
spec:
  hosts:
  - fraud-detection
  http:
  - route:
    - destination:
        host: fraud-detection
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: fraud-detection-destination-rule
spec:
  host: fraud-detection
  subsets:
  - name: v1
    labels:
      version: v1
